Fixed spacing stats and small copy

--- a/stories/Molecules/Blocks/StatsCards/statscards.scss
+++ b/stories/Molecules/Blocks/StatsCards/statscards.scss
@@ -140,6 +140,7 @@
     .statscard__number {
       font-size: 3.125rem;
       line-height: 54.5px;
+      margin-bottom: $spacing-16;
     }
 
     .statscard__per {
@@ -162,11 +163,13 @@
       .statscard__number {
         font-size: 4.375rem;
         line-height: 76.3px;
+        margin-bottom: $spacing-32;
       }
 
       .statscard__per {
         font-size: $font-size-25;
         line-height: 28.55px;
+        margin-bottom: $spacing-08;
       }
 
       p {
